--- a/references/es6/array-filter.html
+++ b/references/es6/array-filter.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <body>
     <script>
-        /* MAP */
+        /* FILTER */
         /* It iterates through the array to create a new array. You can 
             decide which elements should be added in the new array based
             on some conditions.
