coercion and mutation files added

--- a/references/data-types.html
+++ b/references/data-types.html
@@ -8,9 +8,9 @@
         var b = "hi";
         // boolean
         var c = true;
-        // null
+        // null - also means 'non-existent'
         var d = null;
-        // undefined
+        // undefined - data type of a variable that does not have a value yet
         var e;
         // array
         var f = ['ajax', 'bootstrap', 'css', 'd3js'];
