hoisting file added

--- a/references/scope.html
+++ b/references/scope.html
@@ -3,7 +3,10 @@
 <body>
     <script>
     	// Variables created without the keyword var, are always global, even if they are 
-    	// created inside a function.
+		// created inside a function.
+		
+		// Lexical scoping: a function that is lexically within another function gets access 
+		// to the scope of the outer function.
     	
 		var myVariable = 'global';
 		myOtherVariable = 'global';
