--- a/references/asynchronous.html
+++ b/references/asynchronous.html
@@ -5,37 +5,101 @@
         // /////////////////
         // Asynchronous JS
         // /////////////////
-        const second = () => {
-            setTimeout(() => {
-                console.log('second');
-            }, 1000);
-        }
-        const first = () => {
-            console.log('first');
-            second();
-            console.log('end');
-        }
+        // const second = () => {
+        //     setTimeout(() => {
+        //         console.log('second');
+        //     }, 1000);
+        // }
+        // const first = () => {
+        //     console.log('first');
+        //     second();
+        //     console.log('end');
+        // }
 
-        first();
+        // first();
 
         // /////////////////
-        // Asynchronous JS with Callbacks
+        // Asynchronous JS with Callbacks - Callback Hell
         // /////////////////
-        const getRecipe = () => {
+        // const getRecipe = () => {
+        //     setTimeout(() => {
+        //         const recipeID = [2, 4, 9, 5];
+        //         console.log(recipeID);
+        //         setTimeout(id => {
+        //             const recipe = {title: 'Fresh tomato pasta', publisher: 'Jonas'}
+        //             console.log(`${id}: ${recipe.title}`);
+        //             setTimeout(() => {
+        //                 const recipe2 = {title: 'Italian Pizza', publisher: 'Jonas'};
+        //                 console.log(recipe);
+        //             }, 1500, recipe.publisher);
+        //         }, 1500, recipeID[2]);
+        //     }, 1500);
+        // }
+        // getRecipe();
+
+
+        // /////////////////
+        // From Callback Hell to Promises
+        // /////////////////
+        const getIDs = new Promise((resolve, reject) => {
             setTimeout(() => {
-                const recipeID = [2, 4, 9, 5];
-                console.log(recipeID);
+                resolve([2, 4, 9, 5]);
+            }, 1500);
+        });
+
+        const getRecipe = recipeID => {
+            return new Promise((resolve, reject) => {
                 setTimeout(id => {
                     const recipe = {title: 'Fresh tomato pasta', publisher: 'Jonas'}
-                    console.log(`${id}: ${recipe.title}`);
-                    setTimeout(() => {
-                        const recipe2 = {title: 'Italian Pizza', publisher: 'Jonas'};
-                        console.log(recipe);
-                    }, 1500, recipe.publisher);
-                }, 1500, recipeID[2]);
-            }, 1500);
+                    resolve(`${id}: ${recipe.title}`);
+                }, 1500, recipeID);                
+            })
         }
-        getRecipe();
+
+        const getRelated = publisher => {
+            return new Promise((resolve, reject) => {
+                setTimeout(pub => {
+                    const recipe = {title: 'Fresh tomato pasta', publisher: 'Jonas'}
+                    console.log(`${pub}: ${recipe.title}`);
+                }, 1500, publisher);                
+            })
+        }
+
+        // Promises
+        // /////////////////
+        // getIDs.then(IDs => {
+        //     console.log(IDs);
+        //     return getRecipe(IDs[2]);
+        // })
+        // .then(recipe => {
+        //     console.log(recipe);
+        //     return getRelated('Jonas');
+        // })
+        // .then(recipe => {
+        //     console.log(recipe);
+        // })
+        // .catch(error => {
+        //     console.log("Error!");
+        // })
+
+        // From Promises to Async/Await
+        // /////////////////
+        async function getRecipesAW() {
+            const IDs = await getIDs;
+            console.log(IDs);
+            const recipe = await getRecipe(IDs[2]);
+            console.log(recipe);
+            const related = await getRelated('Jonas');
+            console.log(related);
+
+            return related;
+        }
+
+        getRecipesAW().then(result => {
+            console.log(result);
+        }, error => {
+            console.log('error');
+        });
     </script>
 </body>
 </html>
