--- a/references/callbacks-promise/promise.html
+++ b/references/callbacks-promise/promise.html
@@ -7,17 +7,19 @@
   <script>
     // The executor should call only one resolve or reject. The promise’s state change is final.
     // All further calls of resolve and reject are ignored:
+    // --------------------------
 
     let promise = new Promise(function(resolve, reject) {
       // the function is executed automatically when the promise is constructed
       
       // fulfilled promise
       // after 1 second signal that the job is done with the result "done!"
-      // ------------------------------------------------------------------
+      // --------------------------
       setTimeout(() => resolve("done!"), 1000);
+
       // rejecting the promise with an error
       // after 1 second signal that the job is finished with an error
-      // ------------------------------------------------------------
+      // --------------------------
       setTimeout(() => reject(new Error("Whoops!")), 1000);
     });
 
@@ -25,6 +27,7 @@
       result => console.log(result),
       error => console.log(error)
     );
+
 
     // If we’re interested only in successful completions, then we can provide only one function argument to .then:
     // --------------------------
@@ -41,6 +44,20 @@
     //   setTimeout(() => reject(new Error("Whoops!")), 1000);
     // });
     // promise.catch(alert); // shows "Error: Whoops!" after 1 second  
+
+   
+    // We can also use 'then' and 'catch' together as well
+    // -------------------------- 
+    // let promise = new Promise(function(resolve, reject) {
+    //   // setTimeout(() => resolve("done!"), 1000);
+    //   setTimeout(() => reject(new Error("Whoops!")), 1000);
+    // });
+
+    // promise.then(
+    //   result => console.log(result),
+    // ).catch(
+    //   error => console.log(error)
+    // )
   </script>
 </body>
 </html>
