--- a/references/callbacks-promise/promise.html
+++ b/references/callbacks-promise/promise.html
@@ -1,63 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Promise</title>
-</head>
-<body>
-  <script>
-    // The executor should call only one resolve or reject. The promise’s state change is final.
-    // All further calls of resolve and reject are ignored:
-    // --------------------------
+	<head>
+		<title>Promise</title>
+	</head>
+	<body>
+		<script>
+			// The executor should call only one resolve or reject. The promise’s state change is final.
+			// All further calls of resolve and reject are ignored:
+			// --------------------------
 
-    let promise = new Promise(function(resolve, reject) {
-      // the function is executed automatically when the promise is constructed
-      
-      // fulfilled promise
-      // after 1 second signal that the job is done with the result "done!"
-      // --------------------------
-      setTimeout(() => resolve("done!"), 1000);
+			let promise = new Promise(function (resolve, reject) {
+				// the function is executed automatically when the promise is constructed
 
-      // rejecting the promise with an error
-      // after 1 second signal that the job is finished with an error
-      // --------------------------
-      setTimeout(() => reject(new Error("Whoops!")), 1000);
-    });
+				// fulfilled promise
+				// after 1 second signal that the job is done with the result "done!"
+				// --------------------------
+				setTimeout(() => resolve("done!"), 1000);
 
-    promise.then(
-      result => console.log(result),
-      error => console.log(error)
-    );
+				// rejecting the promise with an error
+				// after 1 second signal that the job is finished with an error
+				// --------------------------
+				setTimeout(() => reject(new Error("Whoops!")), 1000);
+			});
 
+			promise.then(
+				(result) => console.log(result),
+				(error) => console.log(error)
+			);
 
-    // If we’re interested only in successful completions, then we can provide only one function argument to .then:
-    // --------------------------
-    // let promise = new Promise(resolve => {
-    //   setTimeout(() => resolve("done!"), 1000);
-    // });
-    // promise.then(alert); // shows "done!" after 1 second
-    
-    // Or we can use .catch(errorHandlingFunction), which is exactly the same:
-    // If we’re interested only in errors, then we can use null as the first argument: .then(null, errorHandlingFunction). 
-    // The call .catch(f) is a complete analog of .then(null, f), it’s just a shorthand.
-    // --------------------------
-    // let promise = new Promise((resolve, reject) => {
-    //   setTimeout(() => reject(new Error("Whoops!")), 1000);
-    // });
-    // promise.catch(alert); // shows "Error: Whoops!" after 1 second  
+			// If we’re interested only in successful completions, then we can provide only one function argument to .then:
+			// --------------------------
+			// let promise = new Promise(resolve => {
+			//   setTimeout(() => resolve("done!"), 1000);
+			// });
+			// promise.then(alert); // shows "done!" after 1 second
 
-   
-    // We can also use 'then' and 'catch' together as well
-    // -------------------------- 
-    // let promise = new Promise(function(resolve, reject) {
-    //   // setTimeout(() => resolve("done!"), 1000);
-    //   setTimeout(() => reject(new Error("Whoops!")), 1000);
-    // });
+			// Or we can use .catch(errorHandlingFunction), which is exactly the same:
+			// If we’re interested only in errors, then we can use null as the first argument: .then(null, errorHandlingFunction).
+			// The call .catch(f) is a complete analog of .then(null, f), it’s just a shorthand.
+			// --------------------------
+			// let promise = new Promise((resolve, reject) => {
+			//   setTimeout(() => reject(new Error("Whoops!")), 1000);
+			// });
+			// promise.catch(alert); // shows "Error: Whoops!" after 1 second
 
-    // promise.then(
-    //   result => console.log(result),
-    // ).catch(
-    //   error => console.log(error)
-    // )
-  </script>
-</body>
+			// We can also use 'then' and 'catch' together as well
+			// --------------------------
+			// let promise = new Promise(function(resolve, reject) {
+			//   // setTimeout(() => resolve("done!"), 1000);
+			//   setTimeout(() => reject(new Error("Whoops!")), 1000);
+			// });
+
+			// promise.then(
+			//   result => console.log(result),
+			// ).catch(
+			//   error => console.log(error)
+			// )
+
+			/* ********************************* */
+
+			const getPeople = (count) =>
+				new Promise((resolves, rejects) => {
+					const api = `https://api.randomuser.me/?nat=US&results=${count}`;
+					const request = new XMLHttpRequest();
+					request.open("GET", api);
+					request.onload = () =>
+						request.status === 200
+							? resolves(JSON.parse(request.response).results)
+							: reject(Error(request.statusText));
+					request.onerror = (err) => rejects(err);
+					request.send();
+				});
+			// With that, the promise has been created, but it hasn’t been used yet. We can use the promise by calling the
+			// getPeople function and passing in the number of members that should be loaded. The then function can be
+			// chained on to do something once the promise has been fulfilled. When a promise is rejected, any details are
+			// passed back to the catch function, or the catch block if using async/await syntax:
+			getPeople(5)
+				.then((members) => console.log(members))
+				.catch((error) => console.error(`getPeople failed: ${error.message}`));
+		</script>
+	</body>
 </html>
